Added the option to import models directly from BioModels using the model id, restructured code so you either call the importSBMLfromBioModels or importSBMLfromFile function to read and parse the whole model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,8 @@ export(getFunctionOutput)
 export(getFunctionParams)
 export(getRule)
 export(getSpeciesRule)
-export(importSBML)
+export(importSBMLfromBioModels)
+export(importSBMLfromFile)
 export(in_reserved_lib)
 export(sub_ceil)
 export(sub_factorial)
@@ -46,4 +47,5 @@ importFrom(libSBML,Species_getInitialAmount)
 importFrom(libSBML,Species_getInitialConcentration)
 importFrom(libSBML,formulaToString)
 importFrom(libSBML,readSBMLFromFile)
+importFrom(libSBML,readSBMLFromString)
 importFrom(stringi,stri_split_fixed)
