--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(sub_ceil)
 export(sub_factorial)
 export(translate_piecewise)
 export(translate_pow)
+importFrom(httr,GET)
+importFrom(jsonlite,fromJSON)
 importFrom(libSBML,Compartment_getId)
 importFrom(libSBML,Compartment_getSize)
 importFrom(libSBML,FunctionDefinition_getArgument)
@@ -49,3 +51,4 @@ importFrom(libSBML,formulaToString)
 importFrom(libSBML,readSBMLFromFile)
 importFrom(libSBML,readSBMLFromString)
 importFrom(stringi,stri_split_fixed)
+importFrom(stringr,str_trim)
