added functions for lower than and lower equal and fixed piecewise function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(importSBMLfromFile)
 export(in_reserved_lib)
 export(sub_ceil)
 export(sub_factorial)
+export(sub_leq)
+export(sub_lt)
 export(translate_piecewise)
 export(translate_pow)
 importFrom(httr,GET)
