solved how to find derivative for custom functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(AddToParamLib)
 export(SBML_to_odin)
 export(getFunctionOutput)
+export(getFunctionOutputForRules)
 export(getFunctionParams)
 export(getRule)
 export(getSpeciesRule)
@@ -15,6 +16,7 @@ export(sub_leq)
 export(sub_lt)
 export(translate_piecewise)
 export(translate_pow)
+export(translate_root)
 importFrom(httr,GET)
 importFrom(jsonlite,fromJSON)
 importFrom(libSBML,Compartment_getId)
@@ -22,6 +24,7 @@ importFrom(libSBML,Compartment_getSize)
 importFrom(libSBML,FunctionDefinition_getArgument)
 importFrom(libSBML,FunctionDefinition_getBody)
 importFrom(libSBML,FunctionDefinition_getId)
+importFrom(libSBML,KineticLaw_getFormula)
 importFrom(libSBML,KineticLaw_getMath)
 importFrom(libSBML,KineticLaw_getNumParameters)
 importFrom(libSBML,KineticLaw_getParameter)
