investigating odin errors - fixed some unknown variables for non-constant parameters and events

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(importSBMLfromFile)
 export(in_reserved_lib)
 export(sub_ceil)
 export(sub_factorial)
+export(sub_gt)
 export(sub_leq)
 export(sub_lt)
 export(translate_piecewise)
