added func_def_dict to parameters of function getSpeciesRule (fixed error with local variables)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,4 +57,5 @@ importFrom(libSBML,formulaToString)
 importFrom(libSBML,readSBMLFromFile)
 importFrom(libSBML,readSBMLFromString)
 importFrom(stringi,stri_split_fixed)
+importFrom(stringr,str_count)
 importFrom(stringr,str_trim)
