--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(importSBMLfromBioModels)
 export(importSBMLfromFile)
 export(in_reserved_lib)
 export(sub_ceil)
+export(sub_eq_for_comp)
 export(sub_factorial)
+export(sub_geq)
 export(sub_gt)
 export(sub_leq)
 export(sub_lt)
