solved issues with piecewise function and reserved params

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getSpeciesRule)
 export(importSBMLfromBioModels)
 export(importSBMLfromFile)
 export(in_reserved_lib)
+export(sub_and)
 export(sub_ceil)
 export(sub_eq_for_comp)
 export(sub_factorial)
@@ -17,6 +18,7 @@ export(sub_geq)
 export(sub_gt)
 export(sub_leq)
 export(sub_lt)
+export(sub_neq_for_comp)
 export(translate_piecewise)
 export(translate_pow)
 export(translate_root)
