--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,8 @@ RoxygenNote: 7.3.1
 Imports:
     libSBML,
     httr,
-    jsonlite
-    stringi
+    jsonlite,
+    stringi,
     stringr
 Suggests: 
     testthat (>= 3.0.0)
